<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="zamboanga.antao.pockethajj.StepByStepHajj.StepOneFragment">

    <!-- TODO: Update blank fragment layout -->

    <ScrollView
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:weightSum="10"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_weight="5"
                android:id="@+id/img_partOne_arrival"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <ImageView
                android:layout_weight="5"
                android:id="@+id/img_partOne_ihram"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_margin="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvStepPartOneA"
                    android:text="@string/step_one_a"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:textStyle="italic"
                    android:textAlignment="center"
                    android:textColor="@color/bg_screen3"
                    android:layout_marginTop="16dp"
                    android:text="@string/step_one_b"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_marginTop="16dp"
                    android:text="@string/step_one_c"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>







</LinearLayout>
